--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -345,6 +345,7 @@
     "#\n",
     "# I've chosen to do this in a single line, as is more efficient and to\n",
     "# avoid confusion there is already an explanation of what is being done.\n",
+    "# Dropping NaNs is performed later.\n",
     "cad_jpy_df['Return_%'] = (cad_jpy_df[[\"Price\"]].pct_change()*100).replace(-np.inf, np.nan)\n",
     "cad_jpy_df.tail()"
    ]
